--- a/projeto-glass-html5/_css/estilo.css
+++ b/projeto-glass-html5/_css/estilo.css
@@ -33,3 +33,48 @@ figure.teste:hover figcaption {
   opacity: 1;
 
 }
+
+nav#menu {
+  display: block;
+}
+
+nav#menu ul{
+  list-style: none;
+  text-transform: uppercase;
+  position: absolute;
+  top: -20px;
+  left: 300px;
+
+}
+
+nav#menu li {
+  display: inline-block;
+  background-color: #dddddd;
+  padding: 10px;
+  margin: 2px;
+  transition: background-color 1s;
+
+}
+
+nav#menu li:hover {
+  background-color: #606060;
+}
+
+nav#menu h1 {
+  display: none;
+
+}
+
+nav#menu a{
+  color: #000000;
+  text-decoration: none;
+}
+
+nav#menu a:hover {
+  color: #ffffff;
+  text-decoration: underline;
+}
+
+div#interface {
+  width: 800px;
+}
