Alterações da aula 16 do curso de HTML5

--- a/projeto-glass-html5/_css/estilo.css
+++ b/projeto-glass-html5/_css/estilo.css
@@ -55,7 +55,7 @@ nav#menu ul{
   text-transform: uppercase;
   position: absolute;
   top: -20px;
-  left: 300px;
+  left: 450px;
 
 }
 
@@ -85,6 +85,30 @@ nav#menu a{
 nav#menu a:hover {
   color: #ffffff;
   text-decoration: underline;
+}
+
+header#cabecalho {
+  border-bottom: 1px #606060 solid;
+  height: 150px;
+  background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 80px;
+}
+
+header#cabecalho h1 {
+  font-family: Arial, sans-serif;
+  font-size: 30pt;
+  color: #606060;
+  text-shadow: 1px 1px 1px rgba(0,0,0,.6);
+  padding: 0px;
+  margin-bottom: 0px;
+}
+
+header#cabecalho h2 {
+  font-family: Arial, sans-serif;
+  font-size: 15pt;
+  color: #888888;
+  padding: 0px;
+  margin-top: 5px;
+
 }
 
 div#interface {
