--- a/projeto-glass-html5/_css/estilo.css
+++ b/projeto-glass-html5/_css/estilo.css
@@ -110,6 +110,32 @@ table#tabelaspec td {
 
 }
 
+table#tabelaspec td.ce {
+  color: #ffffff;
+  background-color: #606060;
+  vertical-align: top;
+  font-weight: bold;
+}
+
+table#tabelaspec td.cd {
+  background-color: #cecece;
+
+}
+
+table#tabelaspec caption {
+  color: #888;
+  font-size: 13pt;
+  font-weight: bolder;
+}
+
+table#tabelaspec caption span {
+  display:block;
+  float:right;
+  color:#000;
+  font-size: 8pt;
+  margin-top: 10px;
+}
+
 aside#lateral {
   display: block;
   width: 350px;
